--- a/lint/Cargo.toml
+++ b/lint/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "safe_join_lint"
+name = "safe_path_lint"
 version = "0.1.0"
 authors = ["authors go here"]
 description = "decription goes here"
@@ -22,11 +22,11 @@ name = "without_use_mod"
 path = "ui/without_use_mod.rs"
 
 [dependencies]
-clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", tag = "rust-1.55.0" }
+clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", tag = "rust-1.56.1" }
 dylint_linting = "1.0.7"
 if_chain = "1.0.2"
 
-safe_join = { path = ".." }
+safe_path = { path = ".." }
 
 [dev-dependencies]
 anyhow = "1.0.44"
