--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ camino = { version = "1.0.5", optional = true }
 serde = { version = "1.0.131", optional = true }
 test-fuzz = { version = "2.0.0", optional = true }
 
+[build-dependencies]
+rustc_version = "0.4.0"
+
 [dev-dependencies]
 cargo-util = "0.1.1"
 lexiclean = "0.0.1"
