--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       - name: License
         run: |
           cargo install cargo-license
-          cargo license | while read X; do echo "$X" | grep -w 'Apache\|CC0\|ISC\|MIT\|N/A'; done
+          cargo license | while read X; do echo "$X" | tee /dev/stderr | grep -w 'Apache-2.0\|BSD-3-Clause\|CC0-1.0\|ISC\|MIT\|N/A' >/dev/null; done
 
       - name: Clippy
         run: |
