--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ repository = "https://github.com/trailofbits/safe_path"
 description = "To help prevent directory traversal attacks"
 
 [dependencies]
-camino = { version = "1.0.5", optional = true }
-serde = { version = "1.0.131", optional = true }
-test-fuzz = { version = "2.0.0", optional = true }
+camino = { version = "1.0.7", optional = true }
+serde = { version = "1.0.136", optional = true }
+test-fuzz = { version = "2.0.2", optional = true }
 
 [build-dependencies]
 rustc_version = "0.4.0"
@@ -23,3 +23,6 @@ path-clean = "0.1.0"
 
 [features]
 fuzz = [ "serde", "test-fuzz" ]
+
+[profile.bench]
+debug = true
